# rpathtracer

./: Cargo.toml
src/: base.rs  camera.rs  helpers.rs  main.rs  material.rs  renderer.rs  scene.rs  sphere.rs  triangle.rs
