[package]
name = "rpathtracer"
version = "0.1.0"
authors = ["Stefan Menzel <stefan.menzel@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
env_logger = "0.7.1"
getrandom = "0.1.14"
line_drawing = "0.8.0"
log = "0.4.8"
pixels = { path = "../lib/pixels" }
randomize = "3.0.1"
winit = "0.22.0"
winit_input_helper = "0.6.0"
itertools = "0.9.0"
glam = "0.9.3"
rand_xoshiro = "0.4.0"